# househelper

./: .gitignore  README.md  config.js  manifest.json  pages.json
api/: config.js
backend/: househelper.db  main.py  pyproject.toml  test.db  test_geojson.db
backend/api/v1/: __init__.py  apis.py  base.py  geojson.py  house_transactions.py  menus.py  roles.py  users.py
backend/core/: auth.py  config.py  crud.py  database.py  logging.py
backend/crud/: house_transaction.py
backend/data/geojson/: hangzhoushangquan.geojson
backend/models/: base.py  geojson.py  house_transaction.py
backend/schemas/: api.py  geojson.py  house_transaction.py  menu.py  role.py  user.py  wechat.py
backend/tests/: conftest.py  test_geojson.py  test_house_transactions.py
pages/calculator/: index.vue
pages/calculator/payment-detail/: index.vue
pages/calendar/: index.vue
pages/index/: index.vue
pages/map/: index.vue
pages/payment-detail/: index.vue
utils/: auth.js
